adjusted padding and side-btn width to prevent text-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ body {
 }
 
 .side-btn {
-    width: 50%;
+    width: 60%;
     height: 120px;
     font-size: 80%;
     text-align: center;
